# 4-wheeled-ros-robot

./: Assessment.docx  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
gazebo/models/hokuyo-ros/: model.config  model.sdf
gazebo/models/qbot/: model.config  model.sdf
gazebo/world/: assesment.world
launch/: gazebo.launch  navigation.launch
params/: base_local_planner.yaml  costmap_common.yaml  local_costmap.yaml
resources/: gui_plugin.ui
solution-doc/: cpp.tex  references.bib  sdf.tex  solution.tex
src/: gui_plugin.cpp  gui_plugin.h
