<?xml version="1.0"?>
<package>
  <name>qbot_4wheeled_robot</name>
  <version>0.1.0</version>
  <description>ROS based four wheeled robot with rqt GUI for QBot Assesment Exercise</description>

  <maintainer email="frederik.zwilling@gmail.com">Frederik Zwilling</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/zwilling/4-wheeled-ros-robot</url>
  <author email="frederik.zwilling@gmail.com">Frederik Zwilling</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
